# cmake_cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
src/private/app/: app.cpp
src/public/libapp/: libapp.hpp
